Check all of the Banana Mirrors